Updated header code, fixed horizontal scrollbar issue, updated hero header, added tgmpa library (not configured yet), added Site branding customizer fields and contact bar show/hide option, fixed customizer issues

--- a/sass/navigation/_owtmenu.scss
+++ b/sass/navigation/_owtmenu.scss
@@ -30,7 +30,8 @@
 }
 
 .navbar {
-  margin-bottom: 0;
+  margin-top:auto;
+  margin-bottom:auto;
   font-family: $font__navlinks;
   font-size: 12px;
   text-transform: uppercase;
