--- a/sass/site/generic/_header.scss
+++ b/sass/site/generic/_header.scss
@@ -1,3 +1,21 @@
+.site{
+    overflow-x: hidden; /* fix for horizontal padding due to container-fluid */
+}
+.contact-banner{
+  background-color: rgba(0,0,0,0.4);
+  padding: 10px 0px;
+}
+.contact-details{
+  font-family: $font__type1;
+  font-size: 12px;
+}
+.contact-details i{
+  color: $color__site-default;
+}
+.social_links i {
+  padding: 0px 10px;
+  color: $color__site-default;
+}
 #masthead{
   margin:0;
   padding:0;
@@ -9,7 +27,8 @@
 
 .site-header{
   padding: 0px;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(3,3,3,0.3);
+
 }
 .site-title{
   font-weight:bold;
@@ -53,7 +72,7 @@
 
 /* Hero Section */
 .site-hero{
-  padding: 30px 0;
+  padding: 50px 0;
 }
 .hero-title{
   padding-top:50px;
@@ -61,7 +80,7 @@
   font-family: $font__type1;
   font-size: 72px;
   font-weight:bold;
-  color:#fff;
+  color:#424545;
   margin-top:auto;
   margin-bottom:auto;
 }
@@ -78,11 +97,12 @@
   background-color: rgba(0,0,0,0.3);
 }
 .hero-form{
-  background-color: rgba(1,1,1,0.3);
+  background-color: rgba(0,0,0,0.3);
   padding: 5px 10px;
-  border-radius:4px;
+  border-radius:10px;
 }
-.hero-form ~ .wpforms-title {
+.site-hero-form > .wpforms-form  {
   font-family: $font__type2;
-  font-style: italic;
+  font-weight:bold;
+  color: #fff;
 }
