--- a/style.css
+++ b/style.css
@@ -41,6 +41,30 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	## Captions
 	## Galleries
 --------------------------------------------------------------*/
+.site {
+	overflow-x: hidden;
+	/* fix for horizontal padding due to container-fluid */
+}
+
+.contact-banner {
+	background-color: rgba(0, 0, 0, 0.4);
+	padding: 10px 0px;
+}
+
+.contact-details {
+	font-family: "Poppins", sans-serif;
+	font-size: 12px;
+}
+
+.contact-details i {
+	color: #fff;
+}
+
+.social_links i {
+	padding: 0px 10px;
+	color: #fff;
+}
+
 #masthead {
 	margin: 0;
 	padding: 0;
@@ -53,7 +77,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 .site-header {
 	padding: 0px;
-	background-color: rgba(0, 0, 0, 0.3);
+	background-color: rgba(3, 3, 3, 0.3);
 }
 
 .site-title {
@@ -103,7 +127,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 /* Hero Section */
 .site-hero {
-	padding: 30px 0;
+	padding: 50px 0;
 }
 
 .hero-title {
@@ -112,7 +136,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	font-family: "Poppins", sans-serif;
 	font-size: 72px;
 	font-weight: bold;
-	color: #fff;
+	color: #424545;
 	margin-top: auto;
 	margin-bottom: auto;
 }
@@ -131,14 +155,15 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 }
 
 .hero-form {
-	background-color: rgba(1, 1, 1, 0.3);
+	background-color: rgba(0, 0, 0, 0.3);
 	padding: 5px 10px;
-	border-radius: 4px;
+	border-radius: 10px;
 }
 
-.hero-form ~ .wpforms-title {
+.site-hero-form > .wpforms-form {
 	font-family: "PT Sans", sans-serif;
-	font-style: italic;
+	font-weight: bold;
+	color: #fff;
 }
 
 /*--------------------------------------------------------------
@@ -424,7 +449,8 @@ a:hover, a:active {
 }
 
 .navbar {
-	margin-bottom: 0;
+	margin-top: auto;
+	margin-bottom: auto;
 	font-family: "Poppins", sans-serif;
 	font-size: 12px;
 	text-transform: uppercase;
